import { Role } from '@auth/entities/role.entity'
import { Invitation } from '@invitations/entities/invitation.entity'
import { Member } from '@members/entities/member.entity'
import { Column, Entity, OneToMany, PrimaryGeneratedColumn } from 'typeorm'

@Entity()
class Inventory {
  @PrimaryGeneratedColumn('uuid')
  id!: string

  @Column({ type: 'varchar', length: 100, unique: true })
  name!: string

  @Column({ type: 'varchar', length: 255, default: '' })
  description!: string

  @OneToMany(() => Member, (member) => member.inventory, {
    nullable: true
  })
  members?: Member[]

  @OneToMany(() => Invitation, (invitation) => invitation.inventory)
  invitations?: Invitation[]

  @OneToMany(() => Role, (role) => role.inventory)
  roles?: Invitation[]

  @Column({ type: 'timestamp', default: () => 'CURRENT_TIMESTAMP' })
  createdAt?: Date

  @Column({
    type: 'timestamp',
    default: () => 'CURRENT_TIMESTAMP',
    onUpdate: 'CURRENT_TIMESTAMP'
  })
  updatedAt?: Date
}

export { Inventory }
